Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBoolObjBoolObj.quorum
Boolean b
b:SetValue(true)
Boolean bool = b
output bool