Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjBoolObj.quorum
Boolean bool
bool:setValue(true)
Text t = bool